State machine complete

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -8,7 +8,7 @@
     <meta property="og:site_name" content="Phaser-CE Clock">
     <meta property="og:description" content="Built using Phaser-CE TypeScript Babel ParcelJS">
     <meta property="og:image" content="https://raw.githubusercontent.com/Cerlancism/Phaser-CE-Clock/master/ClockIcon.png">
-    <title>Analog Digital Clock</title>
+    <title>Syringe Cleanser</title>
     <style>
         html,
         body {
@@ -23,12 +23,12 @@
             height: 240px;
         }
     </style>
-    <script src="./index.ts"></script>
 </head>
 
 <body>
     <h1 style="position: absolute; color: grey;">Loading</h1>
     <div id="content"></div>
+    <script src="./index.ts"></script>
 </body>
 
 </html>
